@@ -14,7 +14,7 @@
  - PERFORMANCE OF THIS SOFTWARE.
 -->
 
-<!-- $Id: isc-manpage.xsl.in,v 1.2.2.4 2005/05/13 01:32:49 marka Exp $ -->
+<!-- $Id: isc-manpage.xsl.in,v 1.2.2.5 2005/09/12 00:04:58 marka Exp $ -->
 
 <!-- ISC customizations for Docbook-XSL manual page generator. -->
 
@@ -123,6 +123,16 @@
    -->
   <xsl:template match="funcsynopsis">
     <xsl:apply-templates/>
+  </xsl:template>
+
+  <!--
+    - Override template to change formatting.
+    - Line breaks in funcsynopsisinfo are significant.
+   -->
+  <xsl:template match="funcsynopsisinfo">
+    <xsl:text>&#10;.nf&#10;</xsl:text>
+    <xsl:apply-templates/>
+    <xsl:text>&#10;.fi&#10;</xsl:text>
   </xsl:template>
 
 </xsl:stylesheet>
